<resources>
    <string name="app_name">Akira</string>
    <string name="anime_image">Anime Image</string>
    <string name="anime_name">Anime Name</string>
    <string name="search_anime_here">Search Anime Here</string>
    <string name="prequel">Prequel</string>
    <string name="sequel">Sequel</string>
    <string name="watch_anime">Watch Anime</string>
    <string name="anime_banner">Anime banner</string>
    <string name="anime_thumbnail">Anime Thumbnail</string>
    <string name="login">Login</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="user">User</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="one">1</string>
    <string name="anime_progress">Anime Progress</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="allow_adult">Allow Adult</string>
    <string name="allow_unknown">Allow Unknown</string>
    <string name="enable_dub">Enable Dub</string>
    <string name="enable_sub">Enable Sub</string>
    <string name="read_manga">Read Manga</string>
    <string name="manga_thumbnail">Manga Thumbnail</string>
    <string name="search_manga_here">Search Manga Here</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="anilist_login_desc">Login with Anilist to save progress</string>
    <string name="saved_anime">Saved Anime</string>
    <string name="saved_manga">Saved Manga</string>
    <string name="more">more</string>
    <string-array name="anime_status">
        <item>CURRENT</item>
        <item>COMPLETED</item>
        <item>DROPPED</item>
        <item>PLANNING</item>
        <item>PAUSED</item>
    </string-array>
</resources>