<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.SaveAnimeFragment">

    <Spinner
        android:id="@+id/anime_status_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/anime_progress_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/anime_progress_edit_text"
        app:layout_constraintTop_toTopOf="@+id/anime_progress_edit_text" />

    <TextView
        android:id="@+id/anime_progress_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <EditText
        android:id="@+id/anime_progress_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="4"
        android:inputType="number"
        android:text="@string/one"
        app:layout_constraintEnd_toStartOf="@+id/anime_status_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/anime_progress_add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:padding="12dp"
        android:text="@string/add"
        android:textColor="@android:color/white"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toStartOf="@+id/anime_progress_delete_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anime_progress_edit_text" />

    <Button
        android:id="@+id/anime_progress_delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/black"
        android:padding="12dp"
        android:text="@string/delete"
        android:textColor="@android:color/white"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/anime_progress_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/anime_progress_add_button"
        app:layout_constraintTop_toTopOf="@+id/anime_progress_add_button" />

</androidx.constraintlayout.widget.ConstraintLayout>