<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/watch_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#090909"
        android:clickable="true"
        android:contentDescription="@string/watch_anime"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/play_button_arrowhead"
        app:tint="#545454" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/anime_banner"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/anime_banner"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/black" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/thumbnail_card_view"
                android:layout_width="80dp"
                android:layout_height="140dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/anime_banner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/anime_banner">

                <ImageView
                    android:id="@+id/anime_thumbnail"
                    android:layout_width="80dp"
                    android:layout_height="140dp"
                    android:contentDescription="@string/anime_thumbnail"
                    android:scaleType="centerCrop"
                    app:srcCompat="@color/black" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/anime_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/thumbnail_card_view"
                app:layout_constraintTop_toTopOf="@+id/thumbnail_card_view" />

            <TextView
                android:id="@+id/anime_progress_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/anilist_frame_layout"
                app:layout_constraintStart_toStartOf="@+id/anime_name"
                app:layout_constraintTop_toBottomOf="@+id/anime_name" />

            <TextView
                android:id="@+id/anime_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/anime_name"
                app:layout_constraintStart_toStartOf="@+id/thumbnail_card_view"
                app:layout_constraintTop_toBottomOf="@+id/thumbnail_card_view" />

            <Button
                android:id="@+id/prequel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/black"
                android:padding="12dp"
                android:text="@string/prequel"
                android:textColor="@android:color/white"
                android:visibility="gone"
                app:cornerRadius="24dp"
                app:layout_constraintEnd_toStartOf="@+id/sequel_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/anime_description"
                tools:visibility="visible" />

            <Button
                android:id="@+id/sequel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/black"
                android:padding="12dp"
                android:text="@string/sequel"
                android:textColor="@android:color/white"
                android:visibility="gone"
                app:cornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prequel_button"
                app:layout_constraintTop_toBottomOf="@+id/anime_description"
                tools:visibility="visible" />

            <FrameLayout
                android:id="@+id/anilist_frame_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/thumbnail_card_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/thumbnail_card_view">

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>